vlib/v/checker/tests/division_by_cast_zero_float_err.vv
fn main() {
	println(f32(1.0)/f32(0.0))
	println(f64(1.0)/f64(0.0))
}
